--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@ html {
   font-family: "Asap Condensed", sans-serif;
 }
 
-.hover {
+.hover-box {
   color: #fff;
 }
 
@@ -22,9 +22,9 @@ html {
   transition: all .2s linear;
 }
 
-.hover-box:hover .hover-box-img, .hover-box:focus .hover-box-img{
+.hover-box:hover .hover-box-img, .hover-box:focus .hover-box-img {
   filter: grayscale(0);
-  transition: scale(1.1);
+  transform: scale(1.1);
 }
 
 .hover-box:focus {
